feat: add books CRUD API(#28) - Add books CRUD - Add relationships with authors and publisher - Add swagger documents, unit tests
